# PrimaryFlightDisplay

./: .gitignore  .pre-commit-config.yaml  .usdt_btc.py.swo  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CTestConfig.cmake  LICENSE  README.md  gauge_data.cpp  gauge_data.h  get_cmake_generator.sh  uml  usdt_btc.py
cmake/modules/: CCache.cmake  CPackConfig.cmake
controller/: joystick_event_hander.hpp  tmp.cpp
controller_unit/include/: register.hpp
docs/software_design/: class_diagram.uml
drone_controller_interface/: CMakeLists.txt
drone_controller_interface/include/drone_controller_interace/: drone_controller_interface.h
gauge_indicator/: CMakeLists.txt  linear_gauge_value.cpp
gauge_indicator/include/gauge_indicator/: abstract_gauge.h  linear_gauge.h
gauge_indicator/include/gauge_indicator/private/: linear_gauge_private.h
gauge_indicator/private/: linear_gauge_value.h
gauge_indicator/src/: abstract_gauge.cpp  linear_gauge.cpp
include/: namespace.h  types.h
indicators/: CMakeLists.txt
indicators/airspeed_indicator/include/: airspeed_indicator.h  airspeed_indicator_model.h  airspeed_indicator_view.h
indicators/airspeed_indicator/src/: airspeed_indicator.cpp  airspeed_indicator_model.cpp  airspeed_indicator_test.cpp  airspeed_indicator_view.cpp
indicators/altitude_indicator/include/: altitude_indicator_view.h
indicators/altitude_indicator/src/: altitude_indicator_view.cpp
indicators/attitude_indicator/: CMakeLists.txt
indicators/attitude_indicator/include/: attitude_indicator_view.h
indicators/attitude_indicator/src/: attitude_indicator_view.cpp
indicators/heading_indicator/include/: heading_indicator_view.h
indicators/heading_indicator/src/: heading_indicator_view.cpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/math/include/math/: functions.h
lib/common/math/src/: functions.cpp
lib/indicator/: CMakeLists.txt
lib/indicator/include/indicator/: indicator_functions.h
lib/indicator/src/: indicator_functions.cpp
lib/linear_gauge/: CMakeLists.txt
lib/linear_gauge/include/linear_gauge/: linear_gauge.h
lib/linear_gauge/src/: linear_gauge.cpp
lib/text_item/: CMakeLists.txt
lib/text_item/include/text_item/: text_item.h
lib/text_item/src/: text_item.cpp
primary_flight_display/: CMakeLists.txt
primary_flight_display/include/: abstract_primary_flight_display.h  primary_flight_display_view.h
primary_flight_display/src/: primary_flight_display_view.cpp
src/: CMakeLists.txt  main.cpp
src/communication_interface/: CMakeLists.txt
src/communication_interface/serial_port/include/: serial_port.h
src/communication_interface/serial_port/src/: serial_port.cpp
src/control_commands/interfaces/: command_interface.cpp  command_interface.h  receiver_interface.h
src/imu/include/: axis.h  imu_model.h
src/imu/interface/: accelerometer_interface.h  gyroscope_interface.h
src/imu/src/: imu_model.cpp
src/indicators/: CMakeLists.txt
src/indicators/airspeed_indicator/include/: airspeed_indicator_model.h  airspeed_indicator_view.h
src/indicators/airspeed_indicator/src/: airspeed_indicator.cpp  airspeed_indicator_model.cpp  airspeed_indicator_view.cpp
src/indicators/attitude_indicator/include/: attitude_indicator_view.h
src/indicators/attitude_indicator/src/: attitude_indicator_view.cpp
src/indicators/graphics_layout_item/include/: graphics_layout_item.h
src/indicators/graphics_layout_item/src/: graphics_layout_item.cpp
src/indicators/include/: aircraft_symbol.h  indicator.h  indicator_model.h  indicator_view.h  interface.h  linear_gauge.h  linear_gauge_value.h
src/indicators/src/: aircraft_symbol.cpp  indicator.cpp  indicator_view.cpp  linear_gauge.cpp  linear_gauge_value.cpp
src/primary_flight_display/include/: primary_flight_display_view.h  primary_flight_display_view_interface.h
src/primary_flight_display/src/: primary_flight_display_view.cpp
src/scene/include/: graphics_scene.h
src/scene/src/: graphics_scene.cpp
src/view/include/: graphics_view.h
src/view/src/: graphics_view.cpp
src/window/include/: window.h
src/window/src/: window.cpp
test/: CMakeLists.txt  CTestTestfile.cmake
test/include/fixture/: linear_gauge_fixture.h
test/src/: testTextItem.cpp  test_indicator_functions.cpp  test_linear_gauge.cpp  test_math.cpp
text_item/: CMakeLists.txt
text_item/include/text_item/: text_item.h
text_item/src/: text_item.cpp
tool_buttons/: CMakeLists.txt
widgets/: CMakeLists.txt
widgets/gauge_indicator/: linear_gauge_value.cpp
widgets/gauge_indicator/include/gauge_indicator/: abstract_gauge.h  linear_gauge.h
widgets/gauge_indicator/include/gauge_indicator/private/: linear_gauge_private.h
widgets/gauge_indicator/private/: linear_gauge_value.h
widgets/gauge_indicator/src/: abstract_gauge.cpp  linear_gauge.cpp  linear_gauge_private.cpp
widgets/indicators/airspeed_indicator/: CMakeLists.txt
widgets/indicators/airspeed_indicator/include/: airspeed_indicator.h  airspeed_indicator_model.h  airspeed_indicator_view.h
widgets/indicators/airspeed_indicator/src/: airspeed_indicator.cpp  airspeed_indicator_model.cpp  airspeed_indicator_test.cpp
widgets/indicators/altitude_indicator/include/: altitude_indicator_view.h
widgets/indicators/attitude_indicator/include/: attitude_indicator_view.h
widgets/indicators/attitude_indicator/src/: attitude_indicator_view.cpp
widgets/indicators/heading_indicator/include/: heading_indicator_view.h
widgets/indicators/heading_indicator/src/: heading_indicator_view.cpp
